--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 
 body {
   background-image: url('background.jpeg');
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
   color: white;
   font-family: "Gill Sans", sans-serif;
  }
@@ -15,8 +15,11 @@ body {
  }
 
  h2 {
-  font-size: 20px;
-  
+  font-size: 24px;
+ }
+
+ h3 {
+  font-size: 18px;
  }
 
  #footer {
@@ -38,7 +41,7 @@ body {
   flex-grow: 1;
  }
 
- /* homepage */
+ /* home page */
  #home-container {
   display: flex;
   flex-direction: column;
@@ -50,5 +53,37 @@ body {
  /* contact us page */
 
  #contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 800px;
+ }
 
+ /* menu page  */
+ #menu-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 800px;
+ }
+#menu-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+ .item-container {
+  height: 400px;
+  width: 300px;
+  text-align: center;
+  margin: 15px;
+  padding: 20px;
+  background-color: dimgray;
+  border: 3px solid white;
+ }
+
+ .item-img {
+  width: 275px;
+  height: 275px;
  }
